--- a/99.Archive/github-demo/index.html
+++ b/99.Archive/github-demo/index.html
@@ -20,5 +20,6 @@ Edit done on 06182022 - 2 - 3 - 4 - 5 - 6 - 7 - 8 - 11
 
 Testing commits and merges
 
-1 -- MAIN changes made on Local
+1 -- MAIN (original) 00 updated by DEV on local
 2 -- DEV changes made on local
+3 -- DEV changes made on local
